# Delivery-Truck-Pallet-Packing-Optimization

./: CMakeLists.txt  Makefile  README.md
Code/: main.cpp
Code/algorithms/: backtracking.cpp  backtracking.h  brute_force.cpp  brute_force.h  common.h  dp.cpp  dp.h  greedy.cpp  greedy.h  ilp_solver.cpp  ilp_solver.h
Code/cli/: menu.cpp  menu.h
Code/input/: data_loader.cpp  data_loader.h
Code/utils/: menu.cpp  timer.h
Documentation/: Doxyfile
